--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -5,7 +5,7 @@ on early-init
 
 on init
     mount none /vendor/lost+found /vendor/overlay bind
-    setprop sys.usb.ffs.aio_compat 1
+    mount none /system/etc/fstab.mt6765 /vendor/etc/fstab.mt6765 bind
 
    # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
@@ -13,10 +13,30 @@ on init
     write /proc/sys/vm/swappiness 100
     write /proc/sys/vm/vfs_cache_pressure 100
 
-   # DT2W
-    chown system input /dev/input/event0
-    chown system input /dev/input/event1
-    chown system input /dev/input/event2
+    # Boot time fs tune
+    write /sys/block/sda/queue/iostats 0
+    write /sys/block/sda/queue/scheduler cfq
+    write /sys/block/sda/queue/iosched/slice_idle 0
+    write /sys/block/sda/queue/read_ahead_kb 2048
+    write /sys/block/sda/queue/nr_requests 256
+    write /sys/block/sdb/queue/iostats 0
+    write /sys/block/sdb/queue/scheduler cfq
+    write /sys/block/sdb/queue/iosched/slice_idle 0
+    write /sys/block/sdb/queue/read_ahead_kb 2048
+    write /sys/block/sdb/queue/nr_requests 256
+    write /sys/block/sdc/queue/iostats 0
+    write /sys/block/sdc/queue/scheduler cfq
+    write /sys/block/sdc/queue/iosched/slice_idle 0
+    write /sys/block/sdc/queue/read_ahead_kb 2048
+    write /sys/block/sdc/queue/nr_requests 256
+    write /sys/block/dm-0/queue/read_ahead_kb 2048
+    write /sys/block/dm-1/queue/read_ahead_kb 2048
+    setprop persist.vendor.vilte_support 0
+
+on fs
+    mount_all /vendor/etc/fstab.mt6765 --early
+    mount_all /vendor/etc/fstab.mt6765 --late
+    setprop sys.usb.ffs.aio_compat 1
 
 service charger /system/bin/charger
     class charger
@@ -24,13 +44,44 @@ service charger /system/bin/charger
     group system graphics input
     capabilities SYS_BOOT
     seclabel u:r:charger:s0
+
+on post-fs
+
+    # Unmount the overridden fstab because the SELinux label is incorrect
+    # and some MTK daemons can crash because of that
+    # (at post-fs, the fstab has already been used to mount the partitions,
+    #  so it is fine to just revert back)
+    umount /vendor/etc/fstab.mt6765
+
+    # Disable OEM Lights
+    mount none /dev/null vendor/lib/hw/lights.mt6765.so bind
+    mount none /dev/null vendor/lib/hw/android.hardware.light@2.0-impl-mediatek.so bind
+    mount none /dev/null vendor/bin/hw/android.hardware.light@2.0-service-mediatek bind
+    mount none /dev/null vendor/lib64/hw/lights.mt6765.so bind
+    mount none /dev/null vendor/lib64/hw/android.hardware.light@2.0-impl-mediatek.so bind
+    mount none /dev/null vendor/etc/init/android.hardware.light@2.0-service-mediatek.rc bind
+
+    # Camera
+    setprop oppo.camera.packname com.oppo.camera
+
+on post-fs-data
+
+    # HBM
+    chown system system /sys/kernel/oppo_display/hbm
+    chmod 0666 /sys/kernel/oppo_display/hbm
 	
 on boot
 
+    # DT2W
+    chown system input /dev/input/event0
+    chown system input /dev/input/event1
+    chown system input /dev/input/event2
+
     # Touchscreen/DT2W
     chown system system /proc/touchpanel/double_tap_enable
-    chown 0660 /proc/touchpanel/double_tap_enable
+    chmod 0660 /proc/touchpanel/double_tap_enable
     write /proc/touchpanel/double_tap_enable 1
+    start double_tap_enable
 
     # Disable edge limit control interface
     write /proc/touchpanel/oppo_tp_limit_enable 0
@@ -63,26 +114,41 @@ on charger
 
     write /sys/power/pm_async 0
 
-on post-fs
+on property:sys.boot_completed=1
 
-    # Unmount the overridden fstab because the SELinux label is incorrect
-    # and some MTK daemons can crash because of that
-    # (at post-fs, the fstab has already been used to mount the partitions,
-    #  so it is fine to just revert back)
-    umount /vendor/etc/fstab.mt6765
+    # ZRAM
+    swapon_all /vendor/fstab.enableswap
 
-    # Disable OEM Lights
-    mount none /dev/null vendor/lib/hw/lights.mt6765.so bind
-    mount none /dev/null vendor/lib/hw/android.hardware.light@2.0-impl-mediatek.so bind
-    mount none /dev/null vendor/bin/hw/android.hardware.light@2.0-service-mediatek bind
-    mount none /dev/null vendor/lib64/hw/lights.mt6765.so bind
-    mount none /dev/null vendor/lib64/hw/android.hardware.light@2.0-impl-mediatek.so bind
-    mount none /dev/null vendor/etc/init/android.hardware.light@2.0-service-mediatek.rc bind
+    # Runtime fs tuning for runtime performance
+    write /sys/block/sda/queue/read_ahead_kb 512
+    write /sys/block/sda/queue/nr_requests 128
+    write /sys/block/sda/queue/iostats 1
+    write /sys/block/sdb/queue/read_ahead_kb 512
+    write /sys/block/sdb/queue/nr_requests 128
+    write /sys/block/sdb/queue/iostats 1
+    write /sys/block/sdc/queue/read_ahead_kb 512
+    write /sys/block/sdc/queue/nr_requests 128
+    write /sys/block/sdc/queue/iostats 1
+    write /sys/block/dm-0/queue/read_ahead_kb 128
+    write /sys/block/dm-1/queue/read_ahead_kb 128
 
-    # Camera 
-    setprop oppo.camera.packname com.oppo.camera
+service face_hal /system/bin/true
+    oneshot
+    disabled
+
+# Performance profiles
+on property:perf_profile=1
+    exec - root -- /system/bin/perf_profile.sh 1
+
+on property:perf_profile=0
+    exec - root -- /system/bin/perf_profile.sh 0
 
 on property:sys.boot_completed=1
+
+    chown root root /sys/module/ged/parameters/gx_force_cpu_boost
+    chown root root /proc/cpufreq/cpufreq_power_mode
+    chown root root /proc/cpufreq/cpufreq_cci_mode
+
     # Enable ZRAM
     swapon_all /system/etc/fstab.mt6765
     #Reinit lmkd to reconfigure lmkd properties
