--- a/RealmeDirac/AndroidManifest.xml
+++ b/RealmeDirac/AndroidManifest.xml
@@ -44,9 +44,11 @@
 	    <activity
             android:name=".DiracActivity"
             android:label="@string/dirac_title"
+            android:icon="@drawable/ic_headphone"
             android:theme="@style/Theme.Main">
             <intent-filter>
 		        <action android:name="com.android.settings.action.IA_SETTINGS" />
+                        <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
                        android:value="com.android.settings.category.ia.sound" />
@@ -56,7 +58,7 @@
 
         <service
             android:name=".DiracTileService"
-            android:icon="@drawable/dirac_qs_tile_icon"
+            android:icon="@drawable/ic_headphone"
             android:label="@string/dirac_qs_tile_title"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
