--- a/rootdir/etc/init.mt6765.rc
+++ b/rootdir/etc/init.mt6765.rc
@@ -95,7 +95,7 @@ on charger
     write /sys/devices/system/cpu/cpu5/online 0
     write /sys/devices/system/cpu/cpu4/online 0
 
-    exec /system/bin/e2fsck -f -p /dev/block/platform/bootdevice/by-name/cache
+    exec /bin/e2fsck -f -p /dev/block/platform/bootdevice/by-name/cache
     mount ext4 /dev/block/platform/bootdevice/by-name/cache /cache rw wait
     chmod 0666 /dev/kmsg
     chmod 0775 /mnt/vendor
@@ -124,14 +124,12 @@ on charger
     chown system system /sys/class/leds/red/brightness
     chown system system /sys/class/leds/green/brightness
 
-    start servicemanager
-    start hwservicemanager
     start light-hal-2-0
     start health-hal-2-0
 
 #ifdef VENDOR_EDIT
 #huacai.zhou@bsp.drv modify for setting zram size according to totalram size
-service swap_enable_init /system/bin/sh /system/etc/swap_enable.sh
+service swap_enable_init /bin/sh /system/etc/swap_enable.sh
     user root
     disabled
     oneshot
@@ -147,7 +145,7 @@ on fs
     wait_for_prop hwservicemanager.ready "true"
     start vendor.boot-hal-1-0
     mount_all /vendor/etc/fstab.mt6765
-    exec /system/bin/tune2fs -O has_journal -u 10010 -r 4096 /dev/block/platform/bootdevice/by-name/userdata
+    exec /bin/tune2fs -O has_journal -u 10010 -r 4096 /dev/block/platform/bootdevice/by-name/userdata
     write /sys/kernel/debug/tracing/trace_marker "E"
     write /proc/bootprof "INIT:Mount_END"
 #ifdef VENDOR_EDIT
@@ -985,7 +983,7 @@ on property:persist.vendor.uartconsole.enable=*
 
 
 # bugreport is triggered by holding down volume down, volume up and power
-service bugreport /system/bin/dumpstate -d -p -B -z \
+service bugreport /bin/dumpstate -d -p -B -z \
         -o /data/user_de/0/com.android.shell/files/bugreports/bugreport
     class late_start
     disabled
@@ -1046,7 +1044,7 @@ service pppoe_wlan0 /vendor/bin/launchpppoe
     oneshot
 
 
-service cmmb /system/bin/cmmbsp
+service cmmb /bin/cmmbsp
     class main
     user root
     group system audio camera graphics inet net_bt net_bt_admin net_bw_acct media
@@ -1064,7 +1062,7 @@ service cmmb /system/bin/cmmbsp
 #  Modem related services (Begin)
 #
 ##Add by T.Zh for ppp daemon
-#service pppd /system/bin/pppd file /data/misc/ppp/ppp_options
+#service pppd /bin/pppd file /data/misc/ppp/ppp_options
 #    user root
 #    disabled
 #    oneshot
@@ -1116,7 +1114,7 @@ service meta_tst /vendor/bin/meta_tst
     oneshot
 
 # add loghidl client
-service loghidlsysservice /system/bin/loghidlsysservice
+service loghidlsysservice /bin/loghidlsysservice
     class main
     user root
     group system
@@ -1138,7 +1136,7 @@ on boot
     insmod /vendor/lib/modules/fpsgo.ko
 
 # VSIM service (vendor OSI)
-service osi /system/bin/osi
+service osi /bin/osi
     class main
     user root
     disabled
